--- a/kernels.tex
+++ b/kernels.tex
@@ -167,7 +167,7 @@ $$ \kappa(\x, \x')=\exp\left(-\norm{\x-\x'}^2/2\sigma^2 \right) $$
 This is a valid kernel, since by expanding the square
 $$ \norm{\x-\x'}^2=\x^\tr\x + (\x')^\tr\x' - 2\x^\tr \x' $$
 we can write
-$$ \kappa(\x, \x')=\exp(-\x^\tr\x/2\sigma^2) \exp(\x^\tr\x'/\sigma^2) \exp(-(\x')^\tr\x'/ x\sigma^2) $$
+$$ \kappa(\x, \x')=\exp(-\x^\tr\x/2\sigma^2) \exp(\x^\tr\x'/\sigma^2) \exp(-(\x')^\tr\x'/ 2\sigma^2) $$
 and see that this is a valid kernel.
 
 \section{Application of the Theory of Mercer Kernels to Modelling}
